Troubleshoot background shift on MemCompEgg page - Reduced title image size from 120% to 100% to see if this resolves the issue

--- a/goose-portfolio/src/Components/LottoGenEgg/LottoGenEgg.css
+++ b/goose-portfolio/src/Components/LottoGenEgg/LottoGenEgg.css
@@ -181,8 +181,8 @@
 
 
 }
-
-@media only screen and (max-width: 390px) {
+/*Mobile Screens */
+@media only screen and (min-width: 320px) and (max-width: 480px) {
 
     .LottoPage {
         background-color: #EDE768;
