--- a/goose-portfolio/src/Components/TipsyEgg/TipsyEgg.css
+++ b/goose-portfolio/src/Components/TipsyEgg/TipsyEgg.css
@@ -155,7 +155,7 @@
 }
 
 /* Mobile Screens */
-@media only screen and (max-width: 390px) {
+@media only screen and (min-width:320px) and (max-width: 480px) {
 
     .TipsyPage {
         background-color: #EDE768;
